# ChangeLog for dev-util/gquilt
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gquilt/ChangeLog,v 1.21 2012/12/02 13:25:45 hasufell Exp $

  02 Dec 2012; Julian Ospald <hasufell@gentoo.org> gquilt-0.25.ebuild,
  +files/gquilt-0.25-desktopfile.patch:
  domenu needs eutils, also patch desktop-file for fd.o specs

  06 Nov 2012; Kacper Kowalik <xarthisius@gentoo.org> gquilt-0.25.ebuild:
  Add mercurial as alternative to quilt. Fixes bug 196523 by James Rowe
  <jnrowe@gmail.com>

  05 Sep 2012; Justin Lecher <jlec@gentoo.org> gquilt-0.25.ebuild:
  Use domenu instead insinto + doins to install .desktop files

*gquilt-0.25 (25 Apr 2011)

  25 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gquilt-0.25.ebuild:
  Version bump (bug #316861). Use Python 2 (bug #364837).

  08 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gquilt-0.21.ebuild:
  Delete calls to deprecated python_version().

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> gquilt-0.21:
  Fixing badly broken prerm to be postrm. Fixes #250576

*gquilt-0.21 (25 Apr 2009)

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> +gquilt-0.21.ebuild:
  Bump to 0.21, fixes #266427

  17 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> gquilt-0.20.ebuild:
  fix python eclass use, bug #207667

*gquilt-0.19 (05 Apr 2007)
*gquilt-0.18 (05 Apr 2007)

  05 Apr 2007; Steve Arnold <nerdboy@gentoo.org> -gquilt-0.14.ebuild,
  -gquilt-0.15.ebuild, +gquilt-0.18.ebuild, +gquilt-0.19.ebuild,
  +gquilt-0.20.ebuild:
  correction: removed older broken versions completely; they didn't work
  at all, so only the latest from sourceforge that actually work...

*gquilt-0.20 (05 Apr 2007)

  05 Apr 2007; Steve Arnold <nerdboy@gentoo.org> gquilt-0.14.ebuild,
  gquilt-0.15.ebuild, +gquilt-0.20.ebuild:
  Update for bugs 128244 and 111428 (added latest upstream release and