@@ -3,17 +3,13 @@ Hash: SHA256
 
 AUX gquilt-0.25-desktopfile.patch 402 SHA256 71708d7e518e3be37f7a7a3a506063701f93820cac0bb64b136bc3ae31e93c98 SHA512 194fbe15da3a7c89c9fc534d7fc57e8248f004ebbcb9a39298a53561e6bbb18956f9a287ee1f56074ad6d1846eccd4ff06be06b06c388c385e776b754577d6bc WHIRLPOOL 9341099a3f73209515daf34b25efeb40ae672b449fa58c0dec1a9cec355dd9298025634d4472f24cd795a7060cef9237a968e3d43b2979db051f8b141a6ddb0a
 DIST gquilt-0.25.tar.gz 124957 SHA256 6cc8380e1475166ccd1ea339f691af85b0ca1dd64222046440734f4f4b97d846 SHA512 fd1b98e87b3bc8438620a7105664c487a5fcfed50ade3e144802fc080dfe3a7d94c76f7ff7274d5a98003cffd8305cf9f193b2f799f4846d59e60233f1782f0d WHIRLPOOL d57c63fc877b9d3980589daca53fcd88ccebd108bea9e12ebb873a25b7d5981d89de28cdf24819844704817329b39400cc3536c6f765c4d982b5d0833435e9a6
-EBUILD gquilt-0.25.ebuild 908 SHA256 8e6e687de90e4fe5e3a4af71ea4e597adf5eb74a535307ae4b8b9a9b060b5f47 SHA512 843513c1521ec6190c44bad9d6ceefc7072dd9707407f1fd0aa3badf87e2f7c1180293974dd55cbc6b1e5cfa83517321fcae329750885c55c02a3c4eaff315ea WHIRLPOOL fadf6a2bcf243582b08a690b73a9fd86f630ba74c08abce909438a02530677fbcdbcf7c4f875e763be07e209d513224a4c0e772cf08a9b2c969d1cdebb183c0e
-MISC ChangeLog 3675 SHA256 1e5021dd03cc31d7e95e53661ced6d5d03aaddfc4ac27e2eefee146d06f30d61 SHA512 e65321cbc2108ddc9f6ad0efa070436e3b209c82f5be638f686242da0e7cc094a8353fb58af3317046eee52ff000c415fed76e1a4162fdeef6d275bf1bbc754d WHIRLPOOL 2e9e1a231fb6c25355c06f5901594bf2bac911d77fabac84d1a01a24c73e315c784454e3f90df9e9b08f8b294d00d547ac39b8218a245ec4275da781360e0d14
+EBUILD gquilt-0.25-r1.ebuild 901 SHA256 86e771fea29ae2369ccd3110e4735a6f5bba476408e457fb42d90324b46de989 SHA512 fb920c357ff997eaa4c048c9a76b6d5109c781f0224632f8688c5ca82c1eda9e227667335303e3baf35857c1649a42ecf249c160ea2707beaec5b4974df9622a WHIRLPOOL d12d3dd9c58e79eb02727846aec306b6af8254425062925c8d76f190441fa8bbf7d2e9b7ad8dc6d2eb3b5931ab0d9d773c6fe9886c6ca7b8673ac3b744e9052f
+MISC ChangeLog 3887 SHA256 0bf46f9e752a6a92a0d7af9933949e36171acf121e1b86dae3b8420e7df16476 SHA512 106f6b4fc83a992ab22e90c8071a7a2f0b21e24422d0ea4243403519f44537211313b62e181e85269cc7cc40a4c2ca0574dca27e8989374a5a4d6bcf215beed7 WHIRLPOOL ea999f1680f458a9724c6b8ca049490efde6252f0101f4693fb314043bfc645dd14667d5f5857ddc939e238beba10159186255bcfeae3ff2eaa6b702684f5432
 MISC metadata.xml 163 SHA256 4284d1b30ef24759f1c34ce51225d46b7312913508acf3469f8b66d72b176524 SHA512 188581eba06391c1b7be04eb7078944174be7051f492a3b3fe06c752ea58b1c0a437eba0ffc1c5c29683a9ae06c1b6e449237d69970f48a80b67a316ab3ff030 WHIRLPOOL 0eec211fd1eed4c21a534549b262b38aadb4206571d3ed1e47e7e4cb452c7fdd996e9a6e7859c8641a3d32b90e6c186229c13e569fa9849c491d067242db3aad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJQu1bZAAoJEFpvPKfnPDWzBNgH/j42ozGhUOGH1XwYJxJL4PYE
-x/Ql6hNJ41H9AYozzASyiPpJPRW+ftmIyVfeTEUdtpGLDMvfw2xaZVFUJsdm+7aC
-qhgyPUhuki373GL4Uid9+SRMoofNfAeiYZzlEW2KARE2PRGQaVbXGONqRBvC1KJQ
-YmepgqIbaTF/M4QMnKg9Ppl5diZ2zcDAOUGEUqJljJUQc/JbbsTsv3WSEUaYtIhN
-/KJuuB0tn3RlIpWukbOXO4nG/01qUz0aKrloA5Zs9IWzAo8gpk7x3vtCxwXE3hCE
-/48UYJdqVCTIHYKgs9YAmATt5bKqK0dmm/oNUe4+LMryYFGHpFdBYdIVi9VU6Js=
-=FtuM
+iEYEAREIAAYFAlTq2+EACgkQso7CE7gHKw3p4wCeNbuoavMrvxvoDlJ1c4rkppwn
+PwcAoJ3jXnUclWmxUUeZwiJEAGok6hFx
+=4OSW
 -----END PGP SIGNATURE-----
