@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm prepare setup
-DEPEND=dev-python/pygtk:2 || ( dev-util/quilt dev-util/mercurial ) =dev-lang/python-2*
-DESCRIPTION=A Python/GTK wrapper for quilt
-EAPI=3
-HOMEPAGE=http://gquilt.sourceforge.net/ http://sourceforge.net/projects/gquilt/
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=GPL-2
-RDEPEND=dev-python/pygtk:2 || ( dev-util/quilt dev-util/mercurial ) =dev-lang/python-2*
-SLOT=0
-SRC_URI=mirror://sourceforge/gquilt/gquilt-0.25.tar.gz
-_eclasses_=distutils	92e738ea29389cb3f34778d7a349ac71	eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	cd022f89fef846d083fc994b9e3d8c04	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=cb785cc2cce9feec13503c0fee991f77
